# CircuitPython_RuhRohRotaryIO

./: README.rst  pyproject.toml  ruhrohrotaryio.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: ruhrohrotaryio_simpletest.py  ruhrohrotaryio_workanywhere.py
