# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Tod Kurt
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-ruhrohrotaryio"
description = "pretend to be 'rotaryio' for boards that need non-sequential pins"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Tod Kurt", email = "tod@todbot.com"}
]
urls = {Homepage = "https://github.com/todbot/CircuitPython_RuhRohRotaryIO"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "ruhrohrotaryio",
    "rotaryio",
    "rotaryencoder",
    "rotary",
    "encoder",
    "incrementalecoder",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["ruhrohrotaryio"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
